src/objects/Orchestrated_Action_Queue__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orchestrated Action Queue</relationshipLabel>
        <relationshipName>Orchestrated_Action_Queue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Acton__c</fullName>
        <label>Action</label>
        <picklist>
            <picklistValues>
                <fullName>ERP Create Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ERP Update Account</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Orchestrated_Action_Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Orchestrated Action Log</label>
        <referenceTo>Orchestrated_Action_Log__c</referenceTo>
        <relationshipLabel>Orchestrated Action Queue</relationshipLabel>
        <relationshipName>Orchestrated_Action_Queue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <label>Timestamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <label>Orchestrated Action Queue</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Timestamp__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Account__c</columns>
        <columns>Acton__c</columns>
        <columns>Orchestrated_Action_Log__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Orchestrated Action Queue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orchestrated Action Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>